Desain Game pada PC

--- a/Dunia Games/pc.html
+++ b/Dunia Games/pc.html
@@ -30,7 +30,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
   				<img src="LOL.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">League of Legends (disingkat LoL) adalah sebuah permainan video arena pertarungan daring multipemain yang dikembangkan dan dipublikasikan oleh Riot Games untuk Microsoft Windows dan macOS.<a href="lol.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">League of Legends (disingkat LoL) adalah sebuah permainan video arena pertarungan daring multipemain yang dikembangkan dan dipublikasikan oleh Riot Games untuk Microsoft Windows dan Linux.<a href="lol.html">baca lebih lanjut</a></figcaption>
 			</div>
 			&nbsp;&nbsp;&nbsp;&nbsp;	
 			<div  class="col-md-5">
