Desain tampilan Dota2

--- a/Dunia Games/pc.html
+++ b/Dunia Games/pc.html
@@ -35,7 +35,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;	
 			<div  class="col-md-5">
   				<img src="dota2.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">Sebuah mod yang berhasil menarik hati jutaan gamer di seluruh dunia, Defense of The Ancients (DOTA) memang menjadi fenomena tersendiri. Mengubah mekanik awal yang ditawarkan oleh Warcraft III.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">Sebuah mod yang berhasil menarik hati jutaan gamer di seluruh dunia, Defense of The Ancients (DOTA) memang menjadi fenomena tersendiri. Mengubah mekanik awal yang ditawarkan oleh Warcraft.<a href="dota2.html">baca lebih lanjut</a></figcaption>
 			<br>
 			</div>	
 			
