--- a/Dunia Games/pc.html
+++ b/Dunia Games/pc.html
@@ -43,13 +43,13 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
   				<img src="pubg.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">PlayerUnknown's Battlegrounds (sering disingkat PUBG) adalah sebuah permainan dengan genre battle royale, yang para pemainnya bisa bermain dengan 100 orang sekaligu. Di dalam permainan ini pemain bisa bermain solo, tim 2 orang, dan tim 4 orang.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">PlayerUnknown Battlegrounds  ( PUBG) adalah sebuah permainan dengan genre battle royale, yang para pemainnya bisa bermain dengan 100 orang sekaligu. Di dalam permainan ini pemain bisa bermain solo, tim 2 orang, dan tim 4 orang.<a href="dota2.html">baca lebih lanjut</a></figcaption>
   			</div>
   			&nbsp;&nbsp;&nbsp;&nbsp;	
   			<div class="col-md-5">
   				<img src="RO.jpg" class="img-thumbnail" alt="Responsive image">
   				<figcaption class="figure-caption">
-				Ragnarok Online adalah sebuah MMORPG (Massively Multiplayer Online Role Playing Game) dari Korea Selatan yang dirancang berdasarkan cerita dan latar belakang yang sama dari komik korea terkenal berjudul "Ragnarok" yang ditulis oleh Lee Myoung-Jin.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+				Ragnarok Online adalah sebuah MMORPG (Massively Multiplayer Online Role Playing Game) dari Korea Selatan yang dirancang berdasarkan cerita dan latar belakang yang sama dari komik korea terkenal berjudul "Ragnarok" yang ditulis oleh Lee Myoung.<a href="dota2.html">baca lebih lanjut</a></figcaption>
   			<br>
   			</div>
   			<div class="w-100"></div>
