Desain Tampilan Pengembang

--- a/Dunia Games/pengembang.html
+++ b/Dunia Games/pengembang.html
@@ -45,7 +45,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
   				<img src="pubg.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">PlayerUnknown's Battlegrounds (sering disingkat PUBG) adalah sebuah permainan dengan genre battle royale, yang para pemainnya bisa bermain dengan 100 orang sekaligu. Di dalam permainan ini pemain bisa bermain solo, tim 2 orang, dan tim 4 orang.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Johan Crespo Tarigan &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; NIM 191111215
   			</div>
   			&nbsp;&nbsp;&nbsp;&nbsp;	
   		</div>	
