--- a/Dunia Games/pengembang.html
+++ b/Dunia Games/pengembang.html
@@ -58,7 +58,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 <footer align="center">
-Copyright © 2023 Samboo. All rights reserved.
+Copyright © 2023 Samboo. All rights reserved
 </footer>
 </div>
 </body>
