Tambah foto pengembang

--- a/Dunia Games/pengembang.html
+++ b/Dunia Games/pengembang.html
@@ -44,7 +44,7 @@
 			<div class="w-100"></div>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
-  				<img src="pubg.jpg" class="img-thumbnail" alt="Responsive image">
+  				<img src="191111215.jpg" class="img-thumbnail" alt="Responsive image">
   				<figcaption class="figure-caption">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Johan Crespo Tarigan &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; NIM 191111215
   			</div>
   			&nbsp;&nbsp;&nbsp;&nbsp;	
