Edit Game Apex Mobile

--- a/Dunia Games/game.html
+++ b/Dunia Games/game.html
@@ -30,7 +30,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
   				<img src="Apexx.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">Apex Legend Mobile adalah sebuah permainan video arena pertarungan daring multipemain yang dikembangkan dan dipublikasikan oleh Garena untuk Microsoft Windows dan macOS.<a href="lol.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">Apex Legend Mobile adalah sebuah permainan video arena pertarungan daring multipemain yang dikembangkan dan dipublikasikan oleh Garena untuk Microsoft Windows dan macOS. Permainan ini dirilis untuk Microsoft Windows, PlayStation 4, dan Xbox One pada 4 Februari 2019<a href="lol.html">baca lebih lanjut</a></figcaption>
 			</div>
 			&nbsp;&nbsp;&nbsp;&nbsp;	
 			<div  class="col-md-5">
