--- a/Dunia Games/game.html
+++ b/Dunia Games/game.html
@@ -24,7 +24,7 @@
 	</div>
 	
 	<br>
-	<h2 >&nbsp;&nbsp;&nbsp;&nbsp;<font color="yellow">List Game Online (Review)</font></h2>
+	<h2 >&nbsp;&nbsp;&nbsp;&nbsp;<font color="yellow">List Game online (Review)</font></h2>
 	<div class="container">
 		<div class="row">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
