--- a/Dunia Games/game.html
+++ b/Dunia Games/game.html
@@ -43,7 +43,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
   				<img src="pubg.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">PlayerUnknown's Battlegrounds (sering disingkat PUBG) adalah sebuah permainan dengan genre battle royale, yang para pemainnya bisa bermain dengan 100 orang sekaligu. Di dalam permainan ini pemain bisa bermain solo, tim 2 orang, dan tim 4 orang.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">PlayerUnknown's Battlegrounds (sering disingkat PUBG) adalah sebuah permainan dengan genre battle royale, yang para pemainnya bisa bermain dengan 100 orang sekaligu. Di dalam permainan ini pemain bisa bermain solo, tim 2 orang, dan tim 4 orang.Game ini adalah permainan pertempuran dimana Anda harus mengalahkan musuh dengan menembakinya dengan baik.<a href="dota2.html">baca lebih lanjut</a></figcaption>
   			</div>
   			&nbsp;&nbsp;&nbsp;&nbsp;	
   			<div class="col-md-5">
