--- a/Dunia Games/game.html
+++ b/Dunia Games/game.html
@@ -35,7 +35,7 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;	
 			<div  class="col-md-5">
   				<img src="Mobile.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">Sebuah mod yang berhasil menarik hati jutaan gamer di seluruh dunia, Defense of The Ancients (DOTA) memang menjadi fenomena tersendiri. Mengubah mekanik awal yang ditawarkan oleh Warcraft III.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+  				<figcaption class="figure-caption">Mobile Legends: Bang Bang adalah permainan video seluler ber-genre multiplayer online battle arena yang dikembangkan dan diterbitkan oleh Moonton, anak perusahaan dari ByteDance.<a href="dota2.html">baca lebih lanjut</a></figcaption>
 			<br>
 			</div>	
 			
