Desain Tampilan halaman game Ragnarok

--- a/Dunia Games/game.html
+++ b/Dunia Games/game.html
@@ -49,7 +49,7 @@
   			<div class="col-md-5">
   				<img src="RO.jpg" class="img-thumbnail" alt="Responsive image">
   				<figcaption class="figure-caption">
-				Ragnarok Online adalah sebuah MMORPG (Massively Multiplayer Online Role Playing Game) dari Korea Selatan yang dirancang berdasarkan cerita dan latar belakang yang sama dari komik korea terkenal berjudul "Ragnarok" yang ditulis oleh Lee Myoung-Jin.<a href="dota2.html">baca lebih lanjut</a></figcaption>
+				Ragnarok Online adalah sebuah MMORPG (Massively Multiplayer Online Role Playing Game) dari Korea Selatan yang dirancang berdasarkan cerita dan latar belakang yang sama dari komik korea terkenal berjudul "Ragnarok" yang ditulis oleh Lee Myoung--Jin.<a href="dota2.html">baca lebih lanjut</a></figcaption>
   			<br>
   			</div>
   			<div class="w-100"></div>
