Desain Halaman Untuk Top Up

--- a/Dunia Games/topup.html
+++ b/Dunia Games/topup.html
@@ -56,7 +56,7 @@
   			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<div class="col-md-5">
   				<img src="blank.jpg" class="img-thumbnail" alt="Responsive image">
-  				<figcaption class="figure-caption">Point Blank ada game FPP terbaik game ini di keluarkan pertma oleh garena kemudian dijuak kembali ke jevento game inin sangat terkenal pada masanya. <a href="https://www.codashop.com/id/point-blank">Beli</a></figcaption>
+  				<figcaption class="figure-caption">Point Blank ada game FPP terbaik game ini di keluarkan pertma oleh garena kemudian dijuak kembali ke jepeto game inin sangat terkenal pada masanya. <a href="https://www.codashop.com/id/point-blank">Beli</a></figcaption>
   			
   			</div>
   		</div>	
